yamls/1.5-hello-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: hello
  name: hello
spec:
  containers:
  - args:
    - echo
    - Hello World
    image: busybox
    name: hello
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
