yamls/1.6-mypodx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mypodx
  name: mypodx
spec:
  containers:
  - image: redis
    name: mypodx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
