yamls/2.2-al-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: al-pod
  name: al-pod
spec:
  containers:
  - image: redis
    name: al-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
