yamls/3.1.1-mp-hello.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mp-hello
  name: mp-hello
spec:
  containers:
  - image: nginx
    name: nginx 
    resources: {}
  - image: busybox
    name: busybox
    args:
    - /bin/sh
    - -c    
    - sleep 1000
    resources: {}
  - image: consul:1.8
    name: consul
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
