yamls/4.1-myredis.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: myredis
  name: myredis
spec:
  containers:
  - image: redis
    name: myredis
    livenessProbe:
      exec:
        command:
          - redis-cli 
          - PING
    readinessProbe:
      exec:
        command:
          - redis-cli 
          - PING          
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
