yamls/7.1-vader-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: vader
  name: vader
spec:
  containers:
  - image: nginx
    name: vader
    volumeMounts:
      - name: vadel-vol
        mountPath: "/var/www/html"
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: vadel-vol
      emptyDir: {}
status: {}
